Minor bug fixes

--- a/chat-app-backend/src/main/resources/application.properties
+++ b/chat-app-backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=chat-app-backend
-spring.data.mongodb.uri=mongodb+srv://kumarana998:O46M2zi3nqwU7oe2@cluster0.czgs1.mongodb.net/chatapp
+spring.data.mongodb.uri=${MONGODB_URI}
