--- a/chat-app-backend/src/main/resources/application.properties
+++ b/chat-app-backend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=chat-app-backend
-spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=mongodb://localhost:27017/chat-app
